--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
   --gray-color: #d3d3d3;
   --white-color: #fff;
   --paragraph-color: #272a31;
+  --soft-black: #3c3f46;
 }
 
 body {
@@ -40,6 +41,9 @@ li {
   padding: 0 20px;
 }
 
+img {
+  max-width: 100%;
+}
 
 /* top navbar */
 .top-header {
@@ -69,14 +73,14 @@ li {
 }
 
 .navbar-right {
-    display: block;
-    position: fixed;
-    padding: 5rem;
-    background: rgba(236, 82, 66, 0.7);
-    backdrop-filter: blur(0.1rem);
-    inset: 0 0 0 0%;
-    transform: translateX(100%);
-    transition: transform 0.4s;
+  display: block;
+  position: fixed;
+  padding: 5rem;
+  background: rgba(236, 82, 66, 0.7);
+  backdrop-filter: blur(0.1rem);
+  inset: 0 0 0 0%;
+  transform: translateX(100%);
+  transition: transform 0.4s;
 }
 
 .navbar-nav {
@@ -210,4 +214,86 @@ nav.sticky {
 .hero-content .hero-venue {
   font-size: 14px;
   font-weight: 500;
+}
+
+/* ======== Program css =========== */
+.program {
+  background-color: var(--primary-color);
+  color: var(--white-color);
+  padding: 1rem 0;
+}
+
+.program-content {
+ padding: 2rem 0;
+}
+
+.program-title {
+  text-align: center;
+  margin-bottom: 2rem;
+  font-weight: 500;
+  position: relative;
+  padding: 1rem;
+  padding-bottom: 1.5rem;
+}
+
+.program-title::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  width: 50px;
+  right: 45%;
+  height: 1px;
+  background-color: var(--secondary-color);
+  margin-bottom: 1rem;
+}
+
+.program-list {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.program-item {
+  display: flex;
+  gap: 0.5rem;
+  padding: 0.5rem 1rem;
+  background-color: var(--soft-black);
+}
+
+.program-item .program-item-img {
+  width: 100px;
+  height: 100px;
+  overflow: hidden;
+}
+
+.program-item .program-item-text {
+  padding: 0 0.5rem;
+}
+
+.program-item .program-item-text h3 {
+  color: var(--secondary-color);
+}
+
+.program-item .program-item-text p {
+  font-size: 14px;
+}
+
+.program-cta {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+}
+
+.program-btn {
+ color: var(--white-color);
+ background-color: var(--secondary-color);
+ padding: 1.5rem 2rem;
+ border: 1px solid var(--secondary-color);
+ transition: all 0.2s ease-in-out;
+}
+
+.program-btn:hover {
+  background-color: transparent;
+  color: var(--secondary-color);
 }
