--- a/style.css
+++ b/style.css
@@ -297,3 +297,84 @@ nav.sticky {
   background-color: transparent;
   color: var(--secondary-color);
 }
+
+/* =========== Feature section css =========== */
+.feature-content {
+  padding: 2rem 0;
+}
+
+.feature-list {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.feature-item {
+  display: flex;
+  gap: 1rem;
+  padding: 0.5rem 1rem;
+}
+
+.feature-item .feature-item-img {
+  width: 250px;
+  overflow: hidden;
+}
+
+.feature-item .feature-item-img img {
+  width: 100%;
+  position: relative;
+}
+
+.feature-item .feature-item-img img::after {
+  content: '';
+  position: absolute;
+  width: 100px;
+  height: 100px;
+  background-color: var(--secondary-color);
+}
+
+.role {
+  color: var(--secondary-color);
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 1;
+  font-style: italic;
+  position: relative;
+  padding-bottom: 1.2rem;
+}
+
+.role::before {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  width: 30px;
+  height: 1px;
+  background-color: var(--secondary-color);
+  margin-bottom: 1rem;
+}
+
+.feature-item-text p {
+  font-size: 12px;
+  font-weight: 700;
+}
+
+.more-feature {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.more-btn {
+  width: 100%;
+  text-align: center;
+  padding: 0.5rem;
+  border: 1px solid var(--primary-color);
+  transition: all 0.2s ease-in-out;
+}
+
+.more-btn:hover {
+  background-color: var(--secondary-color);
+  border: 1px solid var(--secondary-color);
+  color: var(--white-color);
+}
