--- a/style.css
+++ b/style.css
@@ -15,13 +15,14 @@
   --white-color: #fff;
   --paragraph-color: #272a31;
   --soft-black: #3c3f46;
+  --gray-color-2: #f3f3f3;
 }
 
 body {
   font-family: 'Inter', sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  color: #333;
+  color: var(--primary-color);
   background-color: #fff;
 }
 
@@ -81,6 +82,7 @@ img {
   inset: 0 0 0 0%;
   transform: translateX(100%);
   transition: transform 0.4s;
+  z-index: 100;
 }
 
 .navbar-nav {
@@ -131,7 +133,7 @@ nav.sticky {
   background-color: var(--primary-color);
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(255, 101, 47, 0.2);
-  transition: all a.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
 }
 
 .menu-btn__burger::before,
@@ -147,11 +149,11 @@ nav.sticky {
 }
 
 .menu-btn__burger::before {
-  transform: translateY(-6PX);
+  transform: translateY(-6px);
 }
 
 .menu-btn__burger::after {
-  transform: translateY(6PX);
+  transform: translateY(6px);
 }
 
 /* nav menu animation */
@@ -162,11 +164,11 @@ nav.sticky {
 }
 
 .menu-btn.open .menu-btn__burger::before {
-  transform: translate(20px, 0px) rotate(45deg);
+  transform: translate(20px, 0) rotate(45deg);
 }
 
 .menu-btn.open .menu-btn__burger::after {
-  transform: translate(20px, 0px) rotate(-45deg);
+  transform: translate(20px, 0) rotate(-45deg);
 }
 
 /* ============== hero section ============ */
@@ -227,7 +229,7 @@ nav.sticky {
  padding: 2rem 0;
 }
 
-.program-title {
+.section-title {
   text-align: center;
   margin-bottom: 2rem;
   font-weight: 500;
@@ -236,7 +238,7 @@ nav.sticky {
   padding-bottom: 1.5rem;
 }
 
-.program-title::before {
+.section-title::before {
   content: '';
   position: absolute;
   bottom: 0;
@@ -274,6 +276,11 @@ nav.sticky {
   color: var(--secondary-color);
 }
 
+.feature-item-text p {
+  font-size: 12px;
+  font-weight: 700;
+}
+
 .program-item .program-item-text p {
   font-size: 14px;
 }
@@ -286,11 +293,11 @@ nav.sticky {
 }
 
 .program-btn {
- color: var(--white-color);
- background-color: var(--secondary-color);
- padding: 1.5rem 2rem;
- border: 1px solid var(--secondary-color);
- transition: all 0.2s ease-in-out;
+  color: var(--white-color);
+  background-color: var(--secondary-color);
+  padding: 1.5rem 2rem;
+  border: 1px solid var(--secondary-color);
+  ransition: all 0.2s ease-in-out;
 }
 
 .program-btn:hover {
@@ -353,11 +360,6 @@ nav.sticky {
   margin-bottom: 1rem;
 }
 
-.feature-item-text p {
-  font-size: 12px;
-  font-weight: 700;
-}
-
 .more-feature {
   display: flex;
   flex-direction: column;
@@ -377,4 +379,183 @@ nav.sticky {
   background-color: var(--secondary-color);
   border: 1px solid var(--secondary-color);
   color: var(--white-color);
+}
+
+/* ============ partner section css =========== */
+.partner {
+  background-color: var(--primary-color);
+  color: var(--white-color);
+  padding: 1rem 0;
+  position: relative;
+}
+
+.partner-title {
+  z-index: 2;
+}
+
+.partner-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.partner-list .partner-item {
+  max-width: 100px;
+  margin-right: 1rem;
+}
+
+.partner-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(236, 82, 66, 0.05);
+  backdrop-filter: blur(0.7rem);
+  opacity: 0.5;
+}
+
+/* ======== Footer section css ========== */
+.footer {
+  color: var(--primary-color);
+  padding: 1rem 0;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.footer-content .footer-logo {
+  max-width: 30%;
+}
+
+.footer-content .footer-logo h1 {
+  font-size: 20px;
+}
+
+.footer-content .footer-adress {
+  font-size: 12px;
+  font-weight: 500;
+}
+
+/* ::::::::::======= About us page ======::::::::: */
+
+/* ======= landing section ===== */
+.landing {
+  background-color: var(--gray-color-2);
+  color: var(--primary-color);
+  padding: 5rem 0;
+}
+
+.about-content {
+  text-align: center;
+}
+
+.about-content .about-welcome-text {
+  color: var(--secondary-color);
+  font-weight: 400;
+  margin-bottom: 0.5rem;
+}
+
+.about-content h1 {
+  color: var(--secondary-color);
+  font-size: 36px;
+  font-weight: 900;
+  line-height: 1;
+  margin-bottom: 3rem;
+}
+
+.about-content .about-p {
+  background-color: var(--white-color);
+  padding: 0.5rem;
+  border: 1px solid var(--gray-color);
+  margin-bottom: 1rem;
+}
+
+.Email-btn {
+  text-decoration: underline;
+  font-weight: 600;
+  transition: all 0.2s ease-in-out;
+}
+
+.Email-btn:hover {
+  color: var(--secondary-color);
+}
+
+/* ======= Logo exposition css ===== */
+.logo-exposition {
+  padding: 3rem 0;
+  background-color: var(--white-color);
+  border-bottom: 1px solid var(--gray-color);
+}
+
+.logo-exposition-content {
+  text-align: center;
+}
+
+.logo-exposition-content .logo-exposition-title {
+  margin-bottom: 1rem;
+}
+
+.logo-exposition-content .logo-exposition-p {
+  margin-bottom: 2rem;
+}
+
+.logo-exposition-content .logo-exposition-l {
+  border: 1px solid var(--gray-color);
+  padding: 1rem 0;
+}
+
+/* history section css */
+.history {
+  padding: 3rem 0;
+  text-align: center;
+}
+
+.history .history-content-desc {
+  margin-bottom: 1.5rem;
+}
+
+.history-title {
+  margin-bottom: 0.2rem !important;
+}
+
+.history-cards {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.history-card {
+  color: var(--white-color);
+  position: relative;
+}
+
+.card-overlay {
+  width: 100%;
+  padding: 4rem 1rem;
+  background-color: rgba(236, 82, 66, 0.7);
+}
+
+.card-1 {
+  background-image: url('img/card-1.jpg');
+  background-position: center;
+  background-size: cover;
+}
+
+.card-2 {
+  background-image: url('img/card-2.jpg');
+  background-position: center;
+  background-size: cover;
+}
+
+.history-card-title {
+  font-weight: 900;
+}
+
+.history-card-p {
+  font-size: 14px;
 }
